--- a/Lab05/scripts/views/login.jade
+++ b/Lab05/scripts/views/login.jade
@@ -8,6 +8,6 @@ html
 				.container
 					form.form-signin(action="/login", method="post")
 						h2.form-sign-heading Ingrese su datos
-						input.input-block-level(type="text", name="username", placeholder="Email")
+						input.input-block-level(type="text", name="usuario", placeholder="Email")
 						input.input-block-level(type="password", name="password", placeholder="Password")
 						button.btn.btn-large.btn-primary(type="submit") Iniciar Sesión
